--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,12 @@
 # production
 /build
 
+credentials.json
+src/JPEG
+
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
