--- a/package.json
+++ b/package.json
@@ -3,13 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/barlow-semi-condensed": "^4.5.7",
+    "@fontsource/bebas-neue": "^4.5.6",
+    "@fontsource/nunito": "^4.5.8",
+    "@fontsource/roboto-condensed": "^4.5.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.15",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "formik": "^2.2.9",
+    "gapi-script": "^1.2.0",
+    "googleapis": "^100.0.0",
     "react": "^18.0.0",
+    "react-device-detect": "github:alexdrimbe/react-device-detect",
     "react-dom": "^18.0.0",
+    "react-final-form": "^6.5.9",
+    "react-icons": "^4.3.1",
+    "react-image-fade-in": "^1.1.3",
+    "react-image-lightbox": "^5.1.4",
+    "react-lazy-load-image-component": "^1.5.4",
+    "react-responsive-masonry": "^2.1.4",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "reactjs-popup": "^2.0.5",
+    "require-context": "^1.1.0",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.6.3",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "http": false,
+    "https": false,
+    "net": false,
+    "path": false,
+    "stream": false,
+    "tls": false
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +68,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
+    "@types/validator": "^13.7.2",
+    "@types/webpack-env": "^1.16.3"
   }
 }
