--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-image-fade-in": "^1.1.3",
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.4",
+    "react-loader-spinner": "^6.0.0-0",
     "react-responsive-masonry": "^2.1.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
