--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jfinophoto",
   "version": "0.1.0",
+  "homepage": "https://jgfino.github.io/jfinophoto",
   "private": true,
   "dependencies": {
     "@fontsource/barlow-semi-condensed": "^4.5.7",
@@ -47,6 +48,8 @@
     "tls": false
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -75,6 +78,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
     "@types/validator": "^13.7.2",
-    "@types/webpack-env": "^1.16.3"
+    "@types/webpack-env": "^1.16.3",
+    "gh-pages": "^3.2.3"
   }
 }
