--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jfinophoto",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@fontsource/barlow-semi-condensed": "^4.5.7",
     "@testing-library/jest-dom": "^5.16.4",
@@ -23,6 +24,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.4",
     "react-loader-spinner": "^6.0.0-0",
+    "react-masonry-css": "^1.0.16",
     "react-responsive-masonry": "^2.1.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
