--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jfinophoto",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/",
   "dependencies": {
     "@fontsource/barlow-semi-condensed": "^4.5.7",
     "@testing-library/jest-dom": "^5.16.4",
