--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "/",
   "dependencies": {
-    "@fontsource/barlow-semi-condensed": "^4.5.7",
+    "@fontsource/magra": "^4.5.11",
+    "@fontsource/roboto-condensed": "^4.5.9",
+    "@fontsource/teko": "^4.5.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +20,7 @@
     "gapi-script": "^1.2.0",
     "googleapis": "^100.0.0",
     "react": "^18.0.0",
+    "react-burger-menu": "^3.0.8",
     "react-device-detect": "github:alexdrimbe/react-device-detect",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
@@ -68,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
