--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-lazy-load-image-component": "^1.5.4",
     "react-loader-spinner": "^6.0.0-0",
     "react-masonry-css": "^1.0.16",
+    "react-responsive": "^9.0.2",
     "react-responsive-masonry": "^2.1.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
